# lazyivy

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml  publish.yml
benches/: rungekutta.rs
examples/: brusselator.rs  lorenzattractor.rs
python/: README.md
python/requirements/: base.in
src/: aux.rs  butcher.rs  error.rs  explicit.rs  explicit_float.rs  explicit_single.rs  explicit_system.rs  lib.rs  linalg.rs  tables.rs
