[package]
name = "lazyivy"
version = "0.2.0"
edition = "2021"
license = "BSD-2-Clause-Patent"
description = "Lazy Runge-Kutta integration for initial value problems."
readme = "README.md"
repository = "https://github.com/ysar/lazyivy"
exclude = [
    "examples/*",
]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
paste = "1.0.14"
