[package]
name = "lazyivy"
version = "0.4.0"
edition = "2021"
license = "BSD-2-Clause-Patent"
description = "Lazy Runge-Kutta integration for initial value problems."
readme = "README.md"
repository = "https://github.com/ysar/lazyivy"
exclude = [
    "examples/*",
]
keywords = ["runge-kutta", "ode", "integration", "lazy-evaluation"]
categories = ["mathematics", "science", "aerospace"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
thiserror = "1.0.63"
